[gd_scene load_steps=3 format=2]

[ext_resource path="res://DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 128.0
margin_top = 49.0
margin_right = 192.0
margin_bottom = 130.0

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "GAME PAUSED"
align = 1

[node name="Gap" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 64.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 2 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 64.0
margin_bottom = 41.0
rect_min_size = Vector2( 64, 16 )
text = "Resume Game"

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 64.0
margin_bottom = 61.0
rect_min_size = Vector2( 64, 16 )
text = "Quit Game"

[node name="QuitMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 81.0
rect_min_size = Vector2( 64, 16 )
text = "Quit to Menu"
